--- a/.ebextensions/python.config
+++ b/.ebextensions/python.config
@@ -2,3 +2,10 @@ option_settings:
   - namespace: aws:elasticbeanstalk:container:python
     option_name: WSGIPath
     value: application:application
+packages:
+  yum:
+    git: []
+
+container_commands:
+  01_nop:
+    command: "echo 'Flask app running on Elastic Beanstalk'"
